my-apps/home/gods-eye-view/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gods-eye-view
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway-internal-technitium
      namespace: gateway
      sectionName: https
  hostnames:
    - gods-eye-view.vanillax.me
  rules:
    - backendRefs:
        - name: gods-eye-view
          port: 4173
